# vba_python

./: .gitignore  README.md  macro_module.bas  main.py  main_with_callbacks.py
gui/: gui.py  gui_actions.py  gv.py  logtext.py  macro_test.bas  main.py  mpp_logger.py  new_gui.py  test_cpp_lib.py  worker.py
gui/cpp_lib/: CMakeLists.txt  excel_vba.cpp
gui/win32com/: client.py
